finished refactoring; working now