@@ -1,2 +1,2 @@
 cd ./%1/build
-"%JAVA15PATH%\java.exe" Main %2
+"%JAVA15PATH%\java.exe" --enable-preview Main %2
